Fix display of UL/OL in comments. Correct spacing of nested UL/OL in posts/comments. Make chronology of OL lists in comments the same as that of OL lists in posts. Add UL/OL styles for 3rd level nesting. Big props to mercime
git-svn-id: https://buddypress.svn.wordpress.org/trunk@4582 cdf35c40-ae34-48e0-9cc9-0c9da1808c22

--- a/bp-themes/bp-default/_inc/css/default-rtl.css
+++ b/bp-themes/bp-default/_inc/css/default-rtl.css
@@ -307,7 +307,7 @@ img.avatar {
 .comments {
 	float: left;
 }
-ol.commentlist li {
+ol.commentlist li.comment {
 	clear: right;
 }
 .commentlist ul.children {
@@ -336,6 +336,9 @@ ol.commentlist div.comment-avatar-box {
 .commentlist ul.children div.comment-avatar-box {
 	float: right;
 	margin: 0 0 0 10px;
+}
+#comments ol.commentlist ol {
+	margin: 0 2.5em 18px 0;
 }
 div.comment-meta {
 	float: right;
